.argocd-state/qrnroll/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrnroll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qrnroll
  template:
    metadata:
      labels:
        app: qrnroll
    spec:
      containers:
        - name: qrnroll
          image: ghcr.io/nasus20202/qrnroll:1.1181.0
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 75Mi
            limits:
              memory: 150Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrnroll-valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qrnroll-valkey
  template:
    metadata:
      labels:
        app: qrnroll-valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:9.1.2-alpine
          ports:
            - containerPort: 6379
              name: valkey
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
          readinessProbe:
            tcpSocket:
              port: valkey
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
