.argocd-state/qrnroll/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrnroll
spec:
  selector:
    app: qrnroll
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: qrnroll-valkey
spec:
  selector:
    app: qrnroll-valkey
  ports:
    - name: valkey
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
